--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,5 +1,5 @@
 include README.rst
 include LICENSE
 include requirements.txt
-include discord/bin/*.dll
-include discord/py.typed
+include nextcord/bin/*.dll
+include nextcord/py.typed
