--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@
 *.egg-info
 venv
 .venv
+.env
 docs/_build
 docs/crowdin.py
 *.buildinfo
@@ -15,4 +16,5 @@ docs/crowdin.py
 *.flac
 *.mo
 pyproject.toml
+build
 dist/
