--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -3,4 +3,4 @@ include LICENSE
 include requirements.txt
 include nextcord/bin/*.dll
 include nextcord/py.typed
-incline discord/py.typed
+include discord/py.typed
