--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -3,12 +3,14 @@
 
 /assets/ @DenverCoder1
 /docs/ @VincentRPS @ooliver1
+/examples/ @VincentRPS @ooliver1
 /.github/CODEOWNERS @veni-vidi-code 
 
 # Voice Rec
 /nextcord/ext/voicerecording/ @veni-vidi-code 
 nextcord/voice_client.py @veni-vidi-code 
 nextcord/opus.py @veni-vidi-code
+examples/receive_vc_audio.py @veni-vidi-code
 
 # Slash Commands
 nextcord/application_command.py @alentoghostflame
