--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -4,17 +4,7 @@
 *       @TAG-Epic
 
 /assets/ @DenverCoder1
-/docs/ @VincentRPS @ooliver1
-/examples/ @VincentRPS @ooliver1
+/docs/ @RPSMain @ooliver1
+/examples/ @RPSMain @ooliver1
 /.github/CODEOWNERS @veni-vidi-code 
 /nextcord/ext/tasks/ @veni-vidi-code 
-
-# Voice Rec
-/nextcord/ext/voicerecording/ @veni-vidi-code 
-nextcord/voice_client.py @veni-vidi-code 
-nextcord/opus.py @veni-vidi-code
-examples/receive_vc_audio.py @veni-vidi-code
-
-# Slash Commands
-nextcord/application_command.py @alentoghostflame
-nextcord/command_client.py @alentoghostflame
