--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -9,8 +9,13 @@ jobs:
       - uses: actions/checkout@v2
         with:
           fetch-depth: 0
-      - uses: akaihola/darker@github-action-v1.3.2-2
+      - name: Getting Python
+      - uses: actions/setup-python@v2.3.0
         with:
-         options: "--check --verbose"
-         src: "./nextcord"
-         version: "1.3.2"
+          python-version: 3.8
+          
+      - name: Installing Depends
+        run: pip install darker
+        
+      - name: Using Darker
+        run: python -m darker .
