docs(?): add to codeowners

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -8,3 +8,5 @@
 /examples/ @RPSMain @ooliver1
 /.github/CODEOWNERS @veni-vidi-code 
 /nextcord/ext/tasks/ @veni-vidi-code 
+/nextcord/scheduled_events.py @ooliver1
+/nextcord/types/scheduled_events.py @ooliver1
