--- a/.github/workflows/format.yml
+++ b/.github/workflows/format.yml
@@ -1,15 +1,16 @@
-name: Format
+name: format
 
-on:
-  pull_request:
-    branches: [ master ]
+on: [push, pull_request]
 
 jobs:
   format:
     runs-on: ubuntu-latest
-
     steps:
       - uses: actions/checkout@v2
-      - uses: rgasper/python-black-pull-request-action@master
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          fetch-depth: 0
+      - uses: akaihola/darker@1.4.0
+        with:
+          options: "--check --verbose"
+          src: "./"
+          version: "1.3.2"
