--- a/.github/workflows/format.yml
+++ b/.github/workflows/format.yml
@@ -9,7 +9,7 @@ jobs:
       - uses: actions/checkout@v2
         with:
           fetch-depth: 0
-      - uses: akaihola/darker@1.3.2
+      - uses: akaihola/darker@github-action-v1.3.2-2
         with:
           options: "--check --verbose"
           src: "./"
