--- a/.github/workflows/format.yml
+++ b/.github/workflows/format.yml
@@ -12,5 +12,5 @@ jobs:
       - uses: akaihola/darker@github-action-v1.3.2-2
         with:
           options: "--check --verbose"
-          src: "./"
+          src: "./nextcord"
           version: "1.3.2"
